# Pifano

./: .gitignore  README.md  pyproject.toml
migrations/versions/: 47f83e103794_.py  ee95f35d2145_.py
pifano/: app.py  pifano.db
pifano/blueprints/restapi/: login_service.py  user_service.py
tests/: conftest.py  test_login.py  test_pifano.py  test_user_api.py
