[tool.poetry]
name = "pifano"
version = "0.1.0"
description = ""
authors = ["Vinicius Ferreira <vinicius.fk9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-language-server = {extras = ["all"], version = "^0.35.1"}
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
