[tool.poetry]
name = "pifano"
version = "0.1.0"
description = ""
authors = ["Vinicius Ferreira <vinicius.fk9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
click = "^7.1.2"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.5.3"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-language-server = {extras = ["all"], version = "^0.35.1"}
ipdb = "^0.13.4"
isort = "^5.6.4"
black = "^20.8b1"
pytest-cov = "^2.10.1"
Flask-DebugToolbar = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
